force-app/main/default/objects/vlocity_ins__Document__c/fields/vlocity_ins__DocumentSourceId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DocumentSourceId__c</fullName>
    <externalId>true</externalId>
    <label>Document Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>