force-app/main/default/objects/vlocity_ins__Document__c/fields/vlocity_ins__DocumentTemplateId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DocumentTemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Document Template Identifier</description>
    <label>Document Template</label>
    <referenceTo>vlocity_ins__DocumentTemplate__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>