force-app/main/default/objects/vlocity_ins__Document__c/fields/vlocity_ins__SectionCount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SectionCount__c</fullName>
    <label>Section Count</label>
    <summaryForeignKey>vlocity_ins__DocumentSection__c.vlocity_ins__DocumentId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>