force-app/main/default/objects/vlocity_ins__Document__c/fields/vlocity_ins__Type__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Type__c</fullName>
    <description>Contract document type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>